Frontend home page changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -46,7 +47,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button :hover {
   border-color: #646cff;
 }
 button:focus,
